bash-startup
============

Version: 0.2.0-9000 [2017-12-11]

 o ...
 

Version: 0.2.0 [2017-12-11]

NEW FEATURES:

 o source_d() now supports key=value and key!=value filtering where 'key'
   is any environment variable or one of the predefined built-in keys,
   i.e. 'interactive'.  Note that it will only filter on the key if its
   value is non-empty.

SOFTWARE QUALITY:

 o Added unit tests ('make test'), which run on Travis CI.


Version: 0.1.0 [2017-12-10]

 o Created bash-startup script with functions generalized from a set of
   in-house functions created over a few years.