@@ -1,3 +1,6 @@
 language: bash
-script: make test
+script:
+  - make test
+  - make check
+
    
